added object constructor and more game logic

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
     <div id="char-gallery">
         <div id="char-group">
             <!-- Obi-Wan Kenobi -->
-            <div id="obi-wan-kenobi" class="char-box">
+            <div id="obi-wan-kenobi" class="char">
                 <h4 class="name">Obi-Wan Kenobi</h4>
                 <img class="char-img"> 
                 <h4 class="health">120</h4>
             </div>
             <!-- Luke Skywalker -->
-            <div id="luke-skywalker" class="char-box">
+            <div id="luke-skywalker" class="char">
                 <h4 class="name">Luke Skywalker</h4>
                 <img class="char-img"> 
                 <h4 class="health">100</h4>
             </div>
             <!-- Darth Sidious -->
-            <div id="darth-sidious" class="char-box">
+            <div id="darth-sidious" class="char">
                 <h4 class="name">Darth Sidious</h4>
                 <img class="char-img"> 
                 <h4 class="health">150</h4>
             </div>
             <!-- Darth Maul -->
-            <div id="darth-maul" class="char-box">
+            <div id="darth-maul" class="char">
                 <h4 class="name">Darth Maul</h4>
                 <img class="char-img"> 
                 <h4 class="health">180</h4>
@@ -63,6 +63,7 @@
         <!-- empty on game start -->
     </div>
     <br>
+    <h5 id="game-info" class="game-text">Game Info</h5>
     <!-- reset button invisible on game start -->
     <button id="reset-btn" class="game-btn">Reset</button>
 
