game functioning and tested

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1 id="game-title">Star Wars RPG!</h1>
+    <h1 id="game-title">Star Wars Episode 1 RPG!</h1>
     
     <div id="char-gallery">
         <div id="char-group">
@@ -41,6 +41,12 @@
                 <img class="char-img"> 
                 <h4 class="health">180</h4>
             </div>
+            <!-- Jar Jar Binks -->
+            <div id="jar-jar-binks" class="char">
+                    <h4 class="name">Jar Jar Binks</h4>
+                    <img class="char-img"> 
+                    <h4 class="health">190</h4>
+            </div>
         </div>
     </div>
     <br>
@@ -63,7 +69,7 @@
         <!-- empty on game start -->
     </div>
     <br>
-    <h5 id="game-info" class="game-text">Game Info</h5>
+    <h5 id="game-info" class="game-text"></h5>
     <!-- reset button invisible on game start -->
     <button id="reset-btn" class="game-btn">Reset</button>
 
