added character images and fixed attack button positioning

--- a/index.html
+++ b/index.html
@@ -20,50 +20,45 @@
             <!-- Obi-Wan Kenobi -->
             <div id="obi-wan-kenobi" class="char">
                 <h4 class="name">Obi-Wan Kenobi</h4>
-                <img class="char-img"> 
+                <img class="char-img" src="./assets/images/obi-wan-kenobi.jpg"> 
                 <h4 class="health">120</h4>
             </div>
             <!-- Luke Skywalker -->
             <div id="luke-skywalker" class="char">
                 <h4 class="name">Luke Skywalker</h4>
-                <img class="char-img"> 
+                <img class="char-img" src="./assets/images/luke-skywalker.jpg"> 
                 <h4 class="health">100</h4>
             </div>
             <!-- Darth Sidious -->
             <div id="darth-sidious" class="char">
                 <h4 class="name">Darth Sidious</h4>
-                <img class="char-img"> 
+                <img class="char-img" src="./assets/images/darth-sidious.png"> 
                 <h4 class="health">150</h4>
             </div>
             <!-- Darth Maul -->
             <div id="darth-maul" class="char">
                 <h4 class="name">Darth Maul</h4>
-                <img class="char-img"> 
+                <img class="char-img" src="./assets/images/darth-maul.png"> 
                 <h4 class="health">180</h4>
             </div>
             <!-- Jar Jar Binks -->
             <div id="jar-jar-binks" class="char">
                     <h4 class="name">Jar Jar Binks</h4>
-                    <img class="char-img"> 
+                    <img class="char-img" src="./assets/images/jar-jar-binks.jpg"> 
                     <h4 class="health">190</h4>
             </div>
         </div>
     </div>
-    <br>
     <div id="your-char-area">
         <h2 class="game-text">Your Character</h2>
         <!-- empty on game start -->
     </div>
-    <br>
     <div id="enemies-to-attack">
         <h2 class="game-text">Enemies Available To Attack</h2>
         <!-- empty on game start -->
     </div>
-    <br>
-    <h2 id="fight-section"></h2>
-    <br>
-    <button id="attack-btn" class="game-btn">Attack</button>
-    <br>
+    <div class="clear-hack"></div>
+    <button id="attack-btn" class="game-btn" >Attack</button>
     <div id="defender-area">
         <h2 class="game-text">Defender</h2>
         <!-- empty on game start -->
